2006-11-19  Allan Hsu <allan@counterpop.net>

	* libgc/darwin_stop_world.c, libgc/include/private/gc_priv.h,
	libgc/os_dep.c: Fixes to make the GC work on OSX/Intel with XCode
	2.4 (10.4u SDK and newer).

	This code should work with older versions of the SDK as well. 

Tue Oct 10 16:58:37 CEST 2006 Paolo Molaro <lupus@ximian.com>

	* darwin_stop_world.c: patch from Allan Hsu <allan@counterpop.net>
	to avoid using memory just after freeing it.

2006-08-31  Zoltan Varga  <vargaz@freemail.hu>

	* libgc.vcproj: Define GC_INSIDE_DLL on VC build too.

2006-08-18  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (EXTRA_DIST): Fix make dist.

	* libtool.m4: Removed, should not be in SVN.

2006-07-19  Zoltan Varga  <vargaz@gmail.com>

	* configure.in: Applied patch from Sergey Tikhonov <tsv@solvo.ru>. Beginning
	of alpha support.

2006-06-28  Martin Baulig  <martin@ximian.com>

	* darwin_stop_world.c, pthread_support.c: Committing a patch from
	Allan Hsu <allan@imeem.com> to fix memory leaks; see bug #78628.

2006-06-26  Zoltan Varga  <vargaz@gmail.com>

	* solaris_threads.c: And another one.

	* solaris_pthreads.c: Avoid another solaris/x86 #error.

2006-04-08  Zoltan Varga  <vargaz@gmail.com>

	* dyn_load.c: Avoid #error "large files are not supported by libelf" errors on solaris/x86.

2006-05-24  Martin Baulig  <martin@ximian.com>

	* doc/debugger-support.txt: Removed; this issue turned out to be
	something completely different and the patch mentioned in this
	file is already reverted.

2006-05-23  Zoltan Varga  <vargaz@gmail.com>

	* os_dep.c (GC_unix_get_mem): Add an assert to bail out early if the runtime is
	run on a machine with smaller page size than HBLKSIZE.

2006-05-19  Martin Baulig  <martin@ximian.com>

	* include/gc.h: Don't include "libgc-mono-debugger.h".

	* pthread_support.c, pthread_stop_world.c: Include it here.

2006-05-17  Martin Baulig  <martin@ximian.com>

	* pthread-support.c, pthread-stop-world.c: Put the debugger stuff