@@ -1,3 +1,9 @@
+2006-12-22  Robert Jordan  <robertj@gmx.net>
+
+	* include/private/gcconfig.h, os_dep.c:
+	Add FreeBSD/amd64 support. Based on a FreeBSD Port Collection patch.
+	r=Paolo.
+
 2006-11-19  Allan Hsu <allan@counterpop.net>
 
 	* libgc/darwin_stop_world.c, libgc/include/private/gc_priv.h,
